--- a/static/styles/_variables.scss
+++ b/static/styles/_variables.scss
@@ -1,4 +1,4 @@
-$break-small: 720px;
+$break-small: 780px;
 // $break-between: 
 $break-mid: 1000px;
 $break-large: 1320px;
